# kschoon.me

./: .env.example  .gitignore  .terraformignore  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml
.circleci/: config.yml
.docker/: faktory.env.example  identity.env.example  sso.env.example
.github/workflows/: test_and_deploy.yml
backend/: .coveragerc  .env.example  .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  diesel.toml  pyproject.toml  requirements.txt  wait-for-it.sh
backend/app/: database.py  helpers.py  main.py  schema.py  tables.py
backend/migrations/2020-04-06-002104_create_checkin/: down.sql  up.sql
backend/src/: database.rs  gql.rs  lib.rs  main.rs  models.rs  schema.rs
backend/tests/: conftest.py  defaults.py  helpers.py  test_helpers.py  test_main.py
backend/worker/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/worker/southwest/: errors.py  southwest.py
checkin/: .eslintrc.js  README.md  codegen.yml  package.json  tsconfig.json
checkin/public/: index.html
checkin/src/: App.test.tsx  App.tsx  Banner.tsx  InputGroup.tsx  TableRow.tsx  checkins.graphql  config.ts  index.tsx
checkin/src/utils/: apollo.ts
deploy/: .gitignore  README.md  azure_rm.yml  digital_ocean.examples.ini  digital_ocean.py  main.tf  pyproject.toml  secrets.example.tfvars  site.yml  variables.tf
deploy/.keys/: dev-kschoon-vms.pub  digitalocean-kschoon-dev.pub  digitalocean-kschoon.pub  prod-kschoon-vms.pub  vms-kschoon-dev.pub
deploy/group_vars/: all.yml  secrets.yml  tag_environment_development.yml  tag_environment_production.yml
deploy/inventory/: prod_azure_rm.yml  staging_azure_rm.yml
deploy/roles/ansible-nomad/meta/: .galaxy_install_info
deploy/roles/api/defaults/: main.yml
deploy/roles/api/tasks/: docker.yml  main.yml
deploy/roles/api/templates/: faktory.env.j2  identity.env.j2  sso.env.j2  web.env.j2
deploy/scripts/: create_ansible_vars.py
identity/: .eslintrc.js  Dockerfile  README.md  db.sh  ormconfig.js  package.json  tsconfig.json
identity/src/: config.ts  errors.ts  index.ts
identity/src/handlers/: identity.ts  notifications.ts
identity/src/lib/: db.ts  grpc.ts
identity/src/migrations/: 1596061245284-initial_user.ts
identity/src/resources/User/: entity.ts  (+1 more)
index/: README.md  package.json
index/config/: website.js
index/src/pages/: index.jsx  index.jsx.bak
notifications/: Dockerfile  nodemon.json  package.json  tsconfig.json
notifications/scripts/: build-protos.sh
notifications/src/: config.ts  index.ts
notifications/src/handlers/: notifications.ts
notifications/src/proto/: notifications_grpc_pb.d.ts  notifications_grpc_pb.js  notifications_pb.d.ts  notifications_pb.js
sso/: .gitignore  Dockerfile  README.md  nodemon.json  package.json  tailwind.config.js  tsconfig.json
sso/src/: config.ts  index.ts  routes.ts
sso/src/helpers/: generate-keys.ts  renderError.ts
sso/src/lib/: account.ts  devJwks.json  grpc.ts  grpcClient.ts  oidcConfig.ts  redis.ts  renderError.ts  retry.ts  types.ts
sso/src/views/: 2fa.ejs  _layout.ejs  login.ejs
