[package]
name = "backend"
version = "0.1.0"
authors = ["Kevin Schoonover <schoonoverkevinm@gmail.com>"]
edition = "2018"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
async-graphql = "1.16.9"
async-graphql-warp = "1.16.9"
chrono = "0.4"
# diesel = { version = "1.4", features = ["postgres", "chrono", "uuidv07", "r2d2"] }
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
faktory = "0.11"
http = "0.2"
serde_json = "1.0.51"
tokio = { version = "0.2", features = ["macros"] }
# uuid = { version = "0.8.1", features = ["serde", "v4"] }
warp = "0.2"

[profile.release]
lto = true
codegen-units=1
opt-level="s"
