[tool.poetry]
name = "api.kschoon.me"
version = "0.1.0"
description = "Backend API for facilitating all server-side interactions from *.kschoon.me"
authors = ["Kevin Schoonover <schoonoverkevinm@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = ">=3.7"
fastapi = "^0.52.0"
sqlalchemy = "^1.3.15"
databases = {extras = ["postgresql"], version = "^0.2.6"}
docker = "^4.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
