[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Worker for managing automated checkin requests."
authors = ["Kevin Schoonover <me@kschoon.me>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
faktory = "^0.4.0"
pytz = "^2020.1"
requests = "^2.24.0"
python-dotenv = "^0.13.0"
gql = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
watchdog = "^0.10.3"
argh = "^0.26.2"
pyyaml = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
